--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <input type="text" placeholder="Suspect" id="suspect" /> killed Mr Boddy in the <input type="text" placeholder="room" id="room" /> with the <input type="text" placeholder="weapon" id="weapon" />
 
     <button>Guess</button>
+
+    <script defer src="game.js"></script>
 </body>
 
 </html>
